objects/Work_Performed__c.object
<CustomObject>
    <description>Object to track job history notes of Problem Description, Work Performed and Recommended Service to assist with reporting and job tracking.</description>
    <fields>
        <fullName>History_Notes__c</fullName>
        <description>Notes description</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_History_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Created date of work history line detail</description>
        <label>Job History Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note_Type__c</fullName>
        <description>Type of note being tracked for use in multi-day jobs</description>
        <label>Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Problem Description</fullName>
                </value>
                <value>
                    <fullName>Recommended Service</fullName>
                </value>
                <value>
                    <fullName>Work Performed</fullName>
                </value>
                <value>
                    <fullName>Estimate Needed</fullName>
                </value>
                <value>
                    <fullName>Parts Needed</fullName>
                </value>
                <value>
                    <fullName>Job Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Status__c</fullName>
        <description>Field used on output documentation to assist with what to report on the Service Report</description>
        <label>Report Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The service report the note was included on</description>
        <label>Service Report</label>
        <referenceTo>Service_Report__c</referenceTo>
        <relationshipLabel>Job Notes</relationshipLabel>
        <relationshipName>Job_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_c__c</fullName>
        <description>Work order related to the job history lists</description>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Job Notes</relationshipLabel>
        <relationshipName>Job_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Job Note</label>
    <nameField>
        <displayFormat>JN-{0000000}</displayFormat>
        <label>Work Performed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>